[package]
name = "git-commits"
version = "0.0.1"
edition = "2021"
description = "Simple library for iterating git commits and changes"
documentation = "https://docs.rs/git-commits"
keywords = ["git", "commit"]
categories = ["development-tools"]
repository = "https://github.com/vallentin/git-commits"
license = "MIT"
readme = "README.md"

[dependencies]
git2 = "0.17"
