[package]
name = "git-commits"
version = "0.1.0"
edition = "2021"
description = "Simple library for iterating git commits and changes"
documentation = "https://docs.rs/git-commits"
keywords = ["git", "commit"]
categories = ["development-tools"]
repository = "https://github.com/vallentin/git-commits"
license = "MIT"
readme = "README.md"

[features]
default = ["chrono"]
chrono = ["dep:chrono"]

[dependencies]
chrono = { version = "0.4", optional = true }
git2 = "0.20"
